# MiniSQL

./: CMakeLists.txt  README.md
data/: TableInfo.txt  book.txt  card.txt  person.txt  test.txt
src/: API.cpp  API.h  Attribute.h  BPlusTree.hpp  BufferManager.cpp  BufferManager.h  CatalogManager.cpp  CatalogManager.h  Condition.cpp  Condition.h  IndexManager.cpp  IndexManager.h  Interpreter.cpp  Interpreter.h  RecordManager.cpp  RecordManager.h  RecordPosition.h  test.cpp
tests/: index-create-delete-0.sql  index-create-delete-1.sql  test-1000.sql  test.sql
